--- a/SuaveJwt/SuaveJwt.fsproj
+++ b/SuaveJwt/SuaveJwt.fsproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.IdentityModel" />
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
