--- a/SuaveJwt.AuthServerHost/SuaveJwt.AuthServerHost.fsproj
+++ b/SuaveJwt.AuthServerHost/SuaveJwt.AuthServerHost.fsproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="AudienceStorage.fs" />
+    <Compile Include="IdentityStore.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
   </ItemGroup>
